@@ -2,7 +2,7 @@
 Copyright (C) 2002-10 Bruce Allen
 Copyright (C) 2004-16 Christian Franke
 
-$Id: smartd.8.in 4280 2016-04-09 11:18:49Z chrfranke $
+$Id: smartd.8.in 4281 2016-04-09 12:21:00Z chrfranke $
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -100,11 +100,13 @@ Examine all entries \fB"/dev/hd[a-t]"\fP for IDE/ATA
 devices, and \fB"/dev/sd[a-z]"\fP, \fB"/dev/sd[a-c][a-z]"\fP
 for ATA/SATA or SCSI/SAS devices.
 Disks behind RAID controllers are not included.
-.\" %IF ENABLE_NVME_DEVICESCAN
 
 [NEW EXPERIMENTAL SMARTD FEATURE]
-Examine all entries \fB"/dev/nvme[0-99]"\fP for NVMe devices.
+If directive \'\-d nvme\'
+.\" %IF ENABLE_NVME_DEVICESCAN
+or no \'\-d\' directive
 .\" %ENDIF ENABLE_NVME_DEVICESCAN
+is specified, examine all entries \fB"/dev/nvme[0-99]"\fP for NVMe devices.
 .\" %ENDIF OS Linux
 .\" %IF OS FreeBSD
 .IP \fBFREEBSD:\fP 9
@@ -141,6 +143,13 @@ examine all entries \fB"/dev/csmi[0\-9],N"\fP for drives behind an Intel
 ICHxR controller with RST driver.
 
 Disks behind Areca RAID controllers are not included.
+
+[NEW EXPERIMENTAL SMARTD FEATURE]
+If directive \'\-d nvme\'
+.\" %IF ENABLE_NVME_DEVICESCAN
+or no \'\-d\' directive
+.\" %ENDIF ENABLE_NVME_DEVICESCAN
+is specified, examine all entries \fB"/dev/nvme[0-9]"\fP for NVMe devices.
 .\" %ENDIF OS Windows Cygwin
 .PP
 \fBsmartd\fP then monitors
@@ -780,4 +789,4 @@ Links to these and other documents may be found on the Links page of the
 .SH PACKAGE VERSION
 CURRENT_SVN_VERSION CURRENT_SVN_DATE CURRENT_SVN_REV
 .br
-$Id: smartd.8.in 4280 2016-04-09 11:18:49Z chrfranke $
+$Id: smartd.8.in 4281 2016-04-09 12:21:00Z chrfranke $
